k8s/green-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: green-deployment
  namespace: submodule-template    
  labels:
    app: green
spec:
  replicas: 1
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: green
  template:
    metadata: 
      labels:
        app: green
    spec:
      containers:
      - name: green
        image: mgmtsv-registry.cloudzcp.io/template/green_img:1
        ports: 
        - containerPort: 80
        imagePullPolicy: Always
