k8s/green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-service
  namespace: submodule-template    
spec:
  ports:
  - name: "http"
    port: 80
    targetPort: 80
  selector:
    app: green
  type: NodePort
