k8s/green-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: green-ingress
  namespace: submodule-template  
  annotations:
    ingress.bluemix.net/rewrite-path: "serviceName=green-server-service rewrite=/"  
spec:
  rules:
  - host: green.com
    http:
      paths:
      - path: /
        backend:
          serviceName: green-service
          servicePort: 80
      - path: /server/
        backend:
          serviceName: green-server-service
          servicePort: 9090
